--- a/imageroot/etc/samba-dc.service
+++ b/imageroot/etc/samba-dc.service
@@ -14,10 +14,8 @@ TimeoutStopSec=70
 # samba exits with 127 on SIGTERM:
 SuccessExitStatus=127
 ExecStartPre=/bin/rm -f %t/%N.pid %t/%N.cid
-# Workaround SELinux access denied:
-ExecStartPre=-runagent -m %N expand_resolv_conf
-ExecStartPre=runagent -m %N expand_dns_forwarder
 ExecStartPre=runagent -m %N samba-network up
+ExecStartPre=runagent -m %N bash -c "(echo -n DNS_FORWARDER= ; print-nameservers) > dns_forwarder.env"
 ExecStart=/usr/bin/podman run \
     --dns=none \
     --no-hosts \
@@ -31,13 +29,12 @@ ExecStart=/usr/bin/podman run \
     --hostname=${HOSTNAME} \
     --log-opt=tag=${MODULE_ID} \
     --replace --name=%N \
+    --env=REALM \
+    --env=IPADDRESS \
+    --env-file=dns_forwarder.env \
     --volume=%N-data:/var/lib/samba:Z \
     --volume=%N-config:/etc/samba:z \
-    --volume=./dns_forwarder:/etc/dns_forwarder:z \
-    --volume=./hosts:/etc/hosts:z \
-    --volume=./resolv.conf:/etc/resolv.conf:z \
-    --volume=./krb5.conf:/etc/krb5.conf:z \
-    ${SAMBA_DC_IMAGE} run-dc
+    ${SAMBA_DC_IMAGE}
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/%N.cid -t 10
 ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/%N.cid
 ExecStopPost=runagent -m %N samba-network down
