samba-dc.service. Add post-start TCP checks
Wait until TCP ports are ready to prevent race conditions with other
services.

--- a/imageroot/etc/samba-dc.service
+++ b/imageroot/etc/samba-dc.service
@@ -38,6 +38,13 @@ ExecStart=/usr/bin/podman run \
     --volume=%N-config:/etc/samba:z \
     --init \
     ${SAMBA_DC_IMAGE}
+
+# Wait until some TCP ports are ready (DNS, Kerberos, LDAP, Global catalog)
+ExecStartPost=/usr/bin/bash -c "while ! exec 3<>/dev/tcp/${IPADDRESS}/53; do sleep 5 ; done"
+ExecStartPost=/usr/bin/bash -c "while ! exec 3<>/dev/tcp/${IPADDRESS}/88; do sleep 5 ; done"
+ExecStartPost=/usr/bin/bash -c "while ! exec 3<>/dev/tcp/${IPADDRESS}/389; do sleep 5 ; done"
+ExecStartPost=/usr/bin/bash -c "while ! exec 3<>/dev/tcp/${IPADDRESS}/3268; do sleep 5 ; done"
+
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/%N.cid -t 10
 ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/%N.cid
 ExecStopPost=runagent -m %N samba-network down
