Override default SAMBA_LOGLEVEL variable
The value for SAMBA_LOGLEVEL can be set in the ./environment file

--- a/imageroot/systemd/user/samba-dc.service
+++ b/imageroot/systemd/user/samba-dc.service
@@ -28,6 +28,7 @@ ExecStart=/usr/bin/podman run \
     --env=IPADDRESS \
     --env=PREFIXLEN \
     --env=NBDOMAIN \
+    --env=SAMBA_LOGLEVEL \
     --env-file=dns_forwarder.env \
     --volume=data:/var/lib/samba:z \
     --volume=config:/etc/samba:z \
