--- a/imageroot/systemd/user/samba-dc.service
+++ b/imageroot/systemd/user/samba-dc.service
@@ -32,6 +32,7 @@ ExecStart=/usr/bin/podman run \
     --env-file=dns_forwarder.env \
     --volume=data:/var/lib/samba:z \
     --volume=config:/etc/samba:z \
+    --volume=shares:/srv/shares:z \
     --init \
     ${SAMBA_DC_IMAGE}
 
