Split shares and homes
Store home dirs in a different volume to avoid mixing them

--- a/imageroot/systemd/user/samba-dc.service
+++ b/imageroot/systemd/user/samba-dc.service
@@ -32,6 +32,7 @@ ExecStart=/usr/bin/podman run \
     --volume=data:/var/lib/samba:z \
     --volume=config:/etc/samba:z \
     --volume=shares:/srv/shares:z \
+    --volume=homes:/srv/homes:z \
     --init \
     ${SAMBA_DC_IMAGE}
 
