--- a/renovate.json
+++ b/renovate.json
@@ -12,9 +12,10 @@
         "test-module.sh"
       ],
       "matchStrings": [
-        "ghcr\\.io\/marketsquare\/robotframework-browser/rfbrowser-stable:(?currentValue[^\\s]+)"
+        "ghcr\\.io/marketsquare/robotframework-browser/rfbrowser-stable:(?<currentValue>[^\\s]+)"
       ],
-      "datasourceTemplate": "docker"
+      "depNameTemplate": "MarketSquare/robotframework-browser",
+      "datasourceTemplate": "github-releases"
     },
     {
       "fileMatch": [
