build. Add the user manager UI bundle

--- a/renovate.json
+++ b/renovate.json
@@ -32,9 +32,19 @@
         "build-images.sh"
       ],
       "matchStrings": [
-        "docker\\.io\/library\/node:(?<currentValue>[^\\s]+)"
+        "\\bdocker\\.io/(?<depName>.+):(?<currentValue>[-0-9\\.a-z]+)"
       ],
       "datasourceTemplate": "docker"
+    },
+    {
+      "fileMatch": [
+        "build-images.sh"
+      ],
+      "matchStrings": [
+        "user_manager_version=(?<currentValue>.*?)\\n"
+      ],
+      "depNameTemplate": "NethServer/ns8-user-manager",
+      "datasourceTemplate": "github-releases"
     }
   ],
   "packageRules": [
